# ostis-example-app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  not_templates  ostis-example-app.ini  repo.path  {{name}}.ini
kb/: section_subjdomain_ligaments_relations.scs
problem-solver/cxx/example-module/: CMakeLists.txt  example_module.cpp
problem-solver/cxx/example-module/agents/: isomorphic_search_agent.cpp  isomorphic_search_agent.hpp  subdividing_search_agent.cpp
problem-solver/cxx/example-module/specifications/isomorphic_search_agent/: ui_menu_isomorphic_search.scs
problem-solver/cxx/example-module/specifications/subdividing_search_agent/: ui_menu_subdividing_search.scs
problem-solver/cxx/exampleModule/: CMakeLists.txt
problem-solver/cxx/exampleModule/agents/: IsomorphicSearchAgent.cpp  SubdividingSearchAgent.cpp
problem-solver/cxx/exampleModule/keynodes/: keynodes.hpp
problem-solver/cxx/exampleModule/specifications/agent_of_isomorphic_search/: ui_menu_isomorphic_search.scs
scripts/: install_ostis.sh  set_vars.sh
